# the_trip_planner

./: .gitignore  README.md  SETUP.md  docker-compose.yml  manage_services.py  postman_foursquare_API.json  postman_google_API.json  postman_yelp_API.json  start.py  start_with_auth.py
server/: __init__.py  app.py  env_template.txt  langgraph.json  langgraph_trip_planner.py  main_graph.py  models.py  pyproject.toml  requirements.txt  state.py  studio_graph.py  test_function_models.py
server/.langgraph_api/: .langgraph_ops.pckl
server/auth/: README.md  __init__.py  database.py  facebook_auth.py  middleware.py  models.py  routes.py
server/cache/: README.md  migrate_apis_to_mongo_cache.py  mongo_cache_decorator.py  mongo_db_cache.py
server/constant/: README.md  __init__.py  constants.py  destination_config.py  place_types.py  restaurant_constants.py
server/error/: __init__.py  base_error.py  trip_planner_errors.py
server/graph_node/: base_node.py
server/graphs/: travel_planner.py
server/llm/: llm_call.py  location_preference_evaluation.py
server/logger/: __init__.py  logger.py
server/models/: README.md  __init__.py  ai_models.py  args_model.py  base_tools_model.py  foursquare_model.py  function_calling.py  google_map_models.py  location_highlight_model.py  location_preference_model.py  point_of_interest_models.py  tools_args_model.py  yelp_model.py
server/prompt/: graph_prompt.py  location.py  location_evaluation.py  location_preference.py  location_types.py
server/service_api/: __init__.py  base_api.py  fourquare_api.py  google_api.py  yelp_api.py  (+1 more)
(+50 files in other folders)
